Thu Jul 22 03:02:55 2010  Eric Hodel  <drbrain@segment7.net>

	* README.EXT: fix signature of rb_ensure and rb_rescue to match
	  implementation.

Tue Jul 20 12:42:06 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/socket/raddrinfo.c (rb_getaddrinfo): according to my
	  valgrind output this variable should be initialized beforehand.

Tue Jul 20 12:50:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_flush_buffer): write and buffer operations should be
	  monolithic.  [ruby-core:31348]

Tue Jul 20 12:27:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#copy): check file name
	  spearator boundary.  [ruby-core:31360]

Mon Jul 19 09:00:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* NEWS (Kernel#instance_eval): add an incompatible change since
	  the 1.9.1 release.  [ruby-core:31336]

Fri Jul 16 12:06:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (ext-arch): prune directories start with '-'.

Wed Jul 14 18:18:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexec.c (match_at): add end point to enclen's argument.
	  This only effect on compilinig with -DONIG_DEBUG_MATCH.

Tue Jul 13 20:46:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_close): should not pass a dynamic
	          string to rb_raise directly.

Sun Jul 11 21:20:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT{,.ja} (rb_block_call): fixed about third/fourth
	  arguments to the block.  based on [ruby-core:31192] by Asher
	  Haig.  [Bug #3558]

Thu Jul 22 14:30:17 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/missing.h: add prototype for ruby_close().

Thu Jul 22 22:38:32 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c: add short documentation about named reference.
	  [ruby-core:31294]

Thu Jul 22 22:14:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexec.c (onig_search): don't skip non-ANYCHARs when
	  .* fails to match. This causes to fail matching